--- a/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-time-breakdown-last-30-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-time-breakdown-last-30-days.yaml
@@ -13,8 +13,8 @@ visualisation:
 query: |-
   SELECT
     display_name "Name"
-    , round(SUM(schedule_travel_time_minutes) / 60, 2) "Scheduled Travel Time Hours"
-    , round(SUM(schedule_duration_minutes) / 60, 2) "Scheduled Working Time Hours"
+    , round(SUM(cast(schedule_travel_time_minutes as numeric)) / 60, 2) "Scheduled Travel Time Hours"
+    , round(SUM(cast(schedule_duration_minutes as numeric)) / 60, 2) "Scheduled Working Time Hours"
     , SUM(duration_hours) "Working Time"
   FROM fact_workitem fw 
   LEFT JOIN dim_user du ON du.users_sk = fw.users_sk
