Updated datasets to work with ChartJS version 3

--- a/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
@@ -26,15 +26,12 @@ visualisation: |-
          "chartType": "bar",
          "options": {
             "scales": {
-               "yAxes": [{
-                  "scaleLabel": {
-                     "display": true,
-                     "labelString": "Projects"
+               "y": {
+                  "title": {
+                     "text": "Projects"
                   },
-                  "ticks": {
-                     "beginAtZero": true
-                  }
-               }]
+                  "beginAtZero": true
+               }
             }
          }
       }
