--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
@@ -25,15 +25,14 @@ visualisation: |-
          "chartType": "bar",
          "options": {
             "scales": {
-               "yAxes": [{
-                  "scaleLabel": {
-                     "display": true,
-                     "labelString": "Completed Work Items"
+               "y": {
+                  "title": {
+                     "text": "Completed Work Items"
                   },
                   "ticks": {
                      "beginAtZero": true
                   }
-               }]
+               }
             }
          }
       }
