--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
@@ -1,39 +1,38 @@
 version: datasets/v0.2
 source: tap-solarvista
 title: Top 5 Customers by Work Items Created
-questions: 'How many work items have to made for each customer?'
+questions: "How many work items have to made for each customer?"
 description: |-
-  Number of work items created for each customer.
+   Number of work items created for each customer.
 
-  #Solarvista
+   #Solarvista
 metadata: |-
-  {
-    "name": "fact_workitem",
-    "label": "Top 5 Customers by Work Items Created",
-    "related_table": {
-        "columns": [
-           {"name": "customer_name", "label": "Customer", "description": "Customer"}
-        ],
-        "aggregates": [
-            {"name": "work_item_total", "label": "Work Items", "description": "Work Items"}
-        ]
-      }
-  }
+   {
+     "name": "fact_workitem",
+     "label": "Top 5 Customers by Work Items Created",
+     "related_table": {
+         "columns": [
+            {"name": "customer_name", "label": "Customer", "description": "Customer"}
+         ],
+         "aggregates": [
+             {"name": "work_item_total", "label": "Work Items", "description": "Work Items"}
+         ]
+       }
+   }
 visualisation: |-
    {
       "chartjs-chart": {
          "chartType": "bar",
          "options": {
             "scales": {
-               "yAxes": [{
-                  "scaleLabel": {
-                     "display": true,
-                     "labelString": "Work Items"
+               "y": {
+                  "title": {
+                     "text": "Work Items"
                   },
                   "ticks": {
                      "beginAtZero": true
                   }
-               }]
+               }
             }
          }
       }
@@ -47,4 +46,3 @@ query: |-
    GROUP BY dc.customer_sk
    ORDER BY "fact_workitem.work_item_total" DESC
    LIMIT 5;
-
