--- a/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
@@ -25,15 +25,14 @@ visualisation: |-
          "chartType": "bar",
          "options": {
             "scales": {
-               "yAxes": [{
-                  "scaleLabel": {
-                     "display": true,
-                     "labelString": "Working Hours"
+               "y": {
+                  "title": {
+                     "text": "Working Hours"
                   },
                   "ticks": {
                      "beginAtZero": true
                   }
-               }]
+               }
             }
          }
       }
