Enabled axis labelling

--- a/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
@@ -28,7 +28,8 @@ visualisation: |-
             "scales": {
                "y": {
                   "title": {
-                     "text": "Projects"
+                     "text": "Projects",
+                     "display": true
                   },
                   "beginAtZero": true
                }
