--- a/bundle/analyze/datasets/tap-solarvista/solarvista-revenue-by-engineer-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-revenue-by-engineer-last-7-days.yaml
@@ -27,7 +27,8 @@ visualisation: |-
             "scales": {
                "y": {
                   "title": {
-                     "text": "Revenue"
+                     "text": "Revenue",
+                     "display": true
                   },
                   "ticks": {
                      "beginAtZero": true
