--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
@@ -27,7 +27,8 @@ visualisation: |-
             "scales": {
                "y": {
                   "title": {
-                     "text": "Completed Work Items"
+                     "text": "Completed Work Items",
+                     "display": true
                   },
                   "ticks": {
                      "beginAtZero": true
