--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
@@ -27,7 +27,8 @@ visualisation: |-
             "scales": {
                "y": {
                   "title": {
-                     "text": "Work Items"
+                     "text": "Work Items",
+                     "display": true
                   },
                   "ticks": {
                      "beginAtZero": true
