--- a/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
@@ -27,7 +27,8 @@ visualisation: |-
             "scales": {
                "y": {
                   "title": {
-                     "text": "Working Hours"
+                     "text": "Working Hours",
+                     "display": true
                   },
                   "ticks": {
                      "beginAtZero": true
